--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -111,6 +111,7 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
+  background: #374774;
 }
 
 #header.header-scrolled,
@@ -136,6 +137,9 @@ h6 {
   max-height: 40px;
 }
 
+.top-down-padding {
+  padding-top: 1em;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
